tests/snapshots/examples_fixtures/errors__unknown_keyword_fn_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/unknown_keyword_fn_error.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E030]: UNKNOWN KEYWORD

Flux uses `fun` for function declarations.

  --> examples/errors/unknown_keyword_fn_error.flx:1:3
  |
1 |   fn main() {
  |   ^^   |
help: Replace 'fn' with 'fun'
   |
1 |   fun main() {
  |   ~~~


--> compiler error[E034]: UNEXPECTED TOKEN

Unexpected `}` outside of a block.

  --> examples/errors/unknown_keyword_fn_error.flx:3:3
  |
3 |   }
  |   ^

Found 2 errors.
== stdout ==
<not executed>
